[FIX] : [linecount is now sticky, scrollbar is not rounded bcz of horizontal scrollbar]

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,19 +4,19 @@
 
 @layer base {
   .scrollbar::-webkit-scrollbar {
-    @apply w-2 rounded-r;
+    @apply w-2 h-2;
   }
 
   .scrollbar::-webkit-scrollbar-track {
-    @apply bg-secondary-800 rounded-r;
+    @apply bg-secondary-800;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    @apply bg-secondary-700 rounded-r;
+    @apply bg-secondary-700;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    @apply bg-secondary-700 rounded-r;
+    @apply bg-secondary-700;
   }
   *::selection {
     @apply bg-theme-400 bg-opacity-40 rounded-md text-white;
